--- a/package.json
+++ b/package.json
@@ -9,9 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.1",
+    "@reduxjs/toolkit": "^1.9.5",
+    "antd": "^5.5.0",
+    "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
+    "css-loader": "^6.7.4",
+    "formik": "^2.2.9",
+    "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "next": "13.4.3",
+    "postcss": "^8.4.23",
+    "postcss-loader": "^7.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "style-loader": "^3.3.3",
+    "tailwindcss": "^3.3.2",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "20.2.1",
