--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.5.2",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
+    "css-loader": "^6.8.1",
     "formik": "^2.4.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
@@ -26,6 +27,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
     "recharts": "^2.6.2",
     "redux": "^4.2.1",
     "typescript": "^4.9.5",
@@ -33,7 +35,7 @@
     "yup": "^1.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3456 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -57,6 +59,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.4",
+    "@babel/preset-react": "^7.22.3",
+    "@babel/preset-typescript": "^7.21.5",
     "tailwindcss": "^3.3.2"
   }
 }
