--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.5.2",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "css-loader": "^6.8.1",
     "formik": "^2.4.0",
     "jwt-decode": "^3.1.2",
