--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.4",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -20,6 +24,7 @@
     "css-loader": "^6.8.1",
     "formik": "^2.4.0",
     "jwt-decode": "^3.1.2",
+    "material-react-table": "^1.12.0",
     "moment": "^2.29.4",
     "postcss": "^8.4.24",
     "reacharts": "^0.4.5",
