--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "chart.js": "^4.3.0",
     "css-loader": "^6.8.1",
     "formik": "^2.4.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "material-react-table": "^1.12.0",
     "moment": "^2.29.4",
@@ -30,6 +32,7 @@
     "reacharts": "^0.4.5",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-component-export-image": "^1.0.6",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
