--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "css-loader": "^6.8.1",
     "formik": "^2.4.0",
     "html2canvas": "^1.4.1",
+    "i18next": "^23.2.3",
     "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "material-react-table": "^1.12.0",
@@ -34,16 +35,19 @@
     "react-chartjs-2": "^5.2.0",
     "react-component-export-image": "^1.0.6",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.1",
+    "react-pdf": "^7.1.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
     "react-share": "^4.4.1",
     "react-slick": "^0.29.0",
+    "react-topbar-progress-indicator": "^4.1.1",
     "recharts": "^2.6.2",
     "redux": "^4.2.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
-    "yup": "^1.0.0"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "set PORT=3456 && react-scripts start",
