--- a/package.json
+++ b/package.json
@@ -17,23 +17,31 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
+    "@types/react-router": "^5.1.20",
     "antd": "^5.5.2",
     "autoprefixer": "^10.4.14",
     "axios": "^1.2.1",
     "chart.js": "^4.3.0",
     "css-loader": "^6.8.1",
+    "dagre": "^0.8.5",
     "formik": "^2.4.0",
     "html2canvas": "^1.4.1",
     "i18next": "^23.2.3",
+    "jquery": "^3.7.0",
     "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "material-react-table": "^1.12.0",
     "moment": "^2.29.4",
+    "nprogress": "^0.2.0",
     "postcss": "^8.4.24",
+    "primereact": "^9.6.0",
     "reacharts": "^0.4.5",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
     "react-component-export-image": "^1.0.6",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.1",
     "react-pdf": "^7.1.2",
@@ -43,6 +51,7 @@
     "react-share": "^4.4.1",
     "react-slick": "^0.29.0",
     "react-topbar-progress-indicator": "^4.1.1",
+    "reactflow": "^11.7.4",
     "recharts": "^2.6.2",
     "redux": "^4.2.1",
     "typescript": "^4.9.5",
@@ -77,6 +86,7 @@
     "@babel/preset-env": "^7.22.4",
     "@babel/preset-react": "^7.22.3",
     "@babel/preset-typescript": "^7.21.5",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "tailwindcss": "^3.3.2"
   }
 }
